fix spacing

--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,7 @@ nav a.nav-dark {
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: -2rem;
+    margin-top: -3rem;
     padding-left: 0;
 }
 
